--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 bokeh = "^3.1.1"
+beautifulsoup4 = "^4.12.2"
 
+
+[tool.poetry.group.dev.dependencies]
+audio-plot-lib = "^0.1.0"
+pytest = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core"]
