--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "touch_sonify"}]
 python = "^3.9"
 bokeh = "^3.1.1"
 beautifulsoup4 = "^4.12.2"
+matplotlib = "^3.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
